--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.30.0",
+    "@strapi/plugin-color-picker": "^5.30.0",
     "@strapi/plugin-users-permissions": "5.30.0",
     "@strapi/strapi": "5.30.0",
+    "@types/react-color": "^3.0.13",
     "better-sqlite3": "11.3.0",
     "react": "^18.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "sharp": "^0.34.4",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
